--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,11 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
+    id("dagger.hilt.android.plugin")
+    id("com.android.application")
+    id("kotlin-android")
     id("de.mannodermaus.android-junit5")
 }
+
+apply plugin: "kotlin-kapt"
 
 android {
     compileSdk 32
@@ -44,6 +47,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
 
+    implementation("com.google.dagger:hilt-android:2.42")
+    kapt("com.google.dagger:hilt-android-compiler:2.42")
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
 
@@ -54,4 +60,9 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
