--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,8 @@ plugins {
     id("dagger.hilt.android.plugin")
     id("com.android.application")
     id("kotlin-android")
+    id("kotlin-kapt")
 }
-
-apply plugin: "kotlin-kapt"
 
 android {
     compileSdk 32
