--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 
     implementation("androidx.activity:activity-ktx:1.4.0")
 
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.1")
+
     implementation("com.google.dagger:hilt-android:2.42")
     kapt("com.google.dagger:hilt-android-compiler:2.42")
 
