--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,11 @@ android {
 }
 
 dependencies {
-    implementation("androidx.core:core-ktx:1.7.0")
-    implementation("androidx.appcompat:appcompat:1.4.1")
+    implementation("androidx.core:core-ktx:1.8.0")
+    implementation("androidx.appcompat:appcompat:1.4.2")
     implementation("com.google.android.material:material:1.6.1")
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2")
+    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3')
 
     implementation("androidx.activity:activity-ktx:1.4.0")
 
